Fixes broken initial build

--- a/assets/css/common/typography.css
+++ b/assets/css/common/typography.css
@@ -7,7 +7,7 @@
 
 .h2,
 .wysiwyg-wrapper h2 {
-  @apply font-black;
+  @apply font-bold;
   font-family: var(--font-family-sans);
   font-size: 1.5625rem; /* 25px */
   line-height: var(--lh-10);
